2008-11-18  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 444112 - Generic
	parameters missing in code completion'.

2008-11-18  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs: fixed 'Bug 355948 - Rename refactoring does
	not rename within #ifdef blocks'.

2008-11-17  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBindingCompilerManager.cs: Don't add the codepage:utf8 option if
	the user selected another codepage. Fix by Ernesto Carrea.

2008-11-17  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 444542 - Weird options
	shown for 'as' operator'.

2008-11-17  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed 'Bug 444538 - Namespaces missing when
	completing 'new' operator'.

2008-11-14  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/MemberCompletionData.cs: Remove unused code.

2008-11-14  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: fixed 'Bug 444110 - Code completion doesn't
	activate'.

2008-11-14  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: Fixed full namespace display of members.

	* Gui/CSharpTextEditorCompletion.cs: Worked on new completion.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fix completion location off-by-one.
	Fixes extra char that was added at end of namespaces.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: Move template completion code to
	MonoDevelop.Ide.

	* Makefile.am:
	* CSharpBinding.mdp: Updated.

	* Gui/CodeTemplateCompletionData.cs: Unused, remove.

2008-11-12  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CodeTemplateCompletionData.cs: Added double tab templates.

2008-11-12  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Autotools/Makefile.am: Fix issue with parallel building.
